tests/syntax_error/double_with_letters_after.jou
def foo() -> void:
    x = 123.456hello  # Error: invalid number or variable name "123.456hello"
